src/plugins/platforms/cocoa/qcocoaaccessibilityelement.mm
@@ -351,6 +351,7 @@ static void convertLineOffset(QAccessibleTextInterface *text, int *line, int *of
         if (QAccessibleTextInterface *text = iface->textInterface()) {
             int line = 0; // true for all single line edits
             if (iface->state().multiLine) {
+                line = -1;
                 int position = text->cursorPosition();
                 convertLineOffset(text, &line, &position);
             }
